[project]
name = "faceswap-diffusion"
version = "0.1.0"
description = ""
authors = [
    {name = "Valentin Kovalev",email = "kovalev.vyu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0) ; python_version >= \"3.10\" and python_version < \"3.11\" and sys_platform == \"linux\"",
    "torchvision (>=0.20.1,<0.21.0) ; python_version >= \"3.10\" and python_version < \"3.11\" and sys_platform == \"linux\"",
    "transformers (>=4.28.1)",
    "numpy (<2)",
    "pillow (>=11.1.0,<12.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "insightface (>=0.7.3,<0.8.0)",
    "loguru (==0.7.3)",
    "torchsde (>=0.2.6,<0.3.0)",
    "einops (>=0.8.0,<0.9.0)",
    "tokenizers (>=0.13.3)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "safetensors (>=0.4.2)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "kornia (>=0.7.1)",
    "spandrel (>=0.4.1,<0.5.0)",
    "soundfile (>=0.13.0,<0.14.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "mediapipe (>=0.10.20,<0.11.0)",
    "facexlib (>=0.3.0,<0.4.0)",
    "onnxruntime (>=1.20.1,<2.0.0)",
    "onnxruntime-gpu (>=1.20.1,<2.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "timm (>=1.0.14,<2.0.0)",
    "torchaudio (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
